# Pathfinding

./: .clang-format  CMakeLists.txt
src/: Main.c  Typedefs.h
